--- a/Paginas de la tienda/Pg3.html
+++ b/Paginas de la tienda/Pg3.html
@@ -20,7 +20,12 @@
         <a href="../Tienda.html"><button style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">Tienda</button></a>
     </header>
     <div style="background-color: black; width: 60%; margin-top: 8%;margin-left: 20%; opacity: 90%; padding-bottom: 1%; padding: 1%;">
-
+        <table>
+            <tr>
+                <td rowspan="3"><img src="../assets/img/Merch seele.png" alt="Imagen de una figura de seele"></td>
+                <td><b style="font-size: xx-large; color: red;">16,29€</b><br><br><span style="font-size: x-large;">Figura del personaje Seele Honkai Star Rail</span><br><br><span style="font-size: large;">Juego Honkai Star Rail figuras Seele modelo Original ornamento decoraciones Anime modelo mascota regalo</span></td>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
