--- a/Paginas de la tienda/Pg6.html
+++ b/Paginas de la tienda/Pg6.html
@@ -20,7 +20,12 @@
         <a href="../Tienda.html"><button style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">Tienda</button></a>
     </header>
     <div style="background-color: black; width: 60%; margin-top: 8%;margin-left: 20%; opacity: 90%; padding-bottom: 1%; padding: 1%;">
-
+        <table>
+            <tr>
+                <td rowspan="3"><img src="../assets/img/Merch cyrene.png" alt="Imagen de una sudadera"></td>
+                <td><b style="font-size: xx-large; color: red;">39,98€</b><br><br><span style="font-size: x-large;">Hajimi Studio Honkai: Star Rail Cyrene 1/6 Resin Statue</span><br><br><span style="font-size: large;"> Hajimi Studio Honkai: Star Rail Cyrene Resin Statue, Ratio: 1/6, Size: Standard Version L420mm*D323mm*H458mm  Deluxe Version L776mm*D350mm*H660mm, Includes: Character+Base,Material: PU+Resin</span></td>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
