--- a/Paginas de la tienda/Pg1.html
+++ b/Paginas de la tienda/Pg1.html
@@ -23,7 +23,7 @@
         <table>
             <tr>
                 <td rowspan="3"><img src="../assets/img/Merch ica.png" alt="Imagen del peluche de ica"></td>
-                <td><b style="font-size: xx-large; color: red;">51,31€</b><br><br><span style="font-size: x-large;">Peluche del personaje ica Honkai Star Rail</span><br><br><span style="font-size: large;"></span>Oficial Honkai Star Rail Little Lca muñeco de peluche Anime almohada ornamento modelo de dibujos animados</td>
+                <td><b style="font-size: xx-large; color: red;">51,31€</b><br><br><span style="font-size: x-large;">Peluche del personaje ica Honkai Star Rail</span><br><br><span style="font-size: large;">Oficial Honkai Star Rail Little Lca muñeco de peluche Anime almohada ornamento modelo de dibujos animados</span></td>
             </tr>
         </table>
     </div>
