--- a/Paginas de la tienda/Pg2.html
+++ b/Paginas de la tienda/Pg2.html
@@ -23,7 +23,7 @@
         <table>
             <tr>
                 <td rowspan="3"><img src="../assets/img/Merch sparkle.png" alt="Imagen de una figura de sparkle"></td>
-                <td><b style="font-size: xx-large; color: red;">71,34€</b><br><br><span style="font-size: x-large;">Figura del personaje Sparkle Honkai Star Rail</span><br><br><span style="font-size: large;"></span>Juego Honkai Star Rail figuras Sparkle Cosplay felpa Maumet modelo Original ornamento decoraciones Anime modelo mascota regalo</td>
+                <td><b style="font-size: xx-large; color: red;">71,34€</b><br><br><span style="font-size: x-large;">Figura del personaje Sparkle Honkai Star Rail</span><br><br><span style="font-size: large;">Juego Honkai Star Rail figuras Sparkle Cosplay felpa Maumet modelo Original ornamento decoraciones Anime modelo mascota regalo</span></td>
             </tr>
         </table>
     </div>
