--- a/Paginas de la tienda/Pg4.html
+++ b/Paginas de la tienda/Pg4.html
@@ -20,7 +20,12 @@
         <a href="../Tienda.html"><button style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">Tienda</button></a>
     </header>
     <div style="background-color: black; width: 60%; margin-top: 8%;margin-left: 20%; opacity: 90%; padding-bottom: 1%; padding: 1%;">
-
+        <table>
+            <tr>
+                <td rowspan="3"><img src="../assets/img/Merch sudadera.png" alt="Imagen de una sudadera"></td>
+                <td><b style="font-size: xx-large; color: red;">29,88€</b><br><br><span style="font-size: x-large;">Sudadera con el logo de Honkai Star Rail</span><br><br><span style="font-size: large;">Nuevo Honkai: Sudaderas con Capucha Star Rail Merch con Estampado Digital 3D, Sudaderas de Manga Larga a la Moda, Jersey Casual</span></td>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
