--- a/Lore.html
+++ b/Lore.html
@@ -20,7 +20,21 @@
         <a href="./Tienda.html"><button style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">Tienda</button></a>
     </header>
     <div style="background-color: black; width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%; padding-bottom: 1%;">
-
+        <table border="1" style="border-collapse: collapse; border: solid 4px white; color: white;">
+            <tr style="border-bottom:solid 4px white ;">
+                <th>Contenido</th>
+            </tr>
+            <tr>
+                <td>
+                    <ol>
+                        <a href="#A" style="color: white; text-decoration: white;"><li>Historia principal</li></a>
+                        <a href="#H" style="color: white; text-decoration: white;"><li>Historias de personajes</li></a>
+                        <a href="#U" style="color: white; text-decoration: white;"><li>Historiaa de los mundos</li></a>
+                        <a href="#U" style="color: white; text-decoration: white;"><li>Historias de los EONES</li></a>
+                    </ol>
+                </td>
+            </tr>
+        </table><br><br><br>
     </div>
 </body>
 </html>
