Pagina de tienda

--- a/Lore.html
+++ b/Lore.html
@@ -35,6 +35,10 @@
                 </td>
             </tr>
         </table><br><br><br>
+        <h1 id="A">Historia principal</h1>
+        <h1 id="H">Historias de personajes</h1>
+        <h1 id="U">Historiaa de los mundos</h1>
+        <h1 id="P">Historias de los EONES</h1>
     </div>
 </body>
 </html>
