--- a/Lore.html
+++ b/Lore.html
@@ -18,7 +18,7 @@
         <a href="./Lore.html"><button style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">Lore</button></a>
         <a href="./Tienda.html"><button style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">Tienda</button></a>
     </header>
-    <div style="background-color: black; width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%; padding-bottom: 1%;">
+    <div style="background-color: black; width: 50%; margin-top: 8%;margin-left: 25%; opacity: 90%; padding: 1%;">
         <table border="1" style="border-collapse: collapse; border: solid 4px white; color: white;">
             <tr style="border-bottom:solid 4px white ;">
                 <th>Contenido</th>
