--- a/Paginas de la tienda/Pg6.html
+++ b/Paginas de la tienda/Pg6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pg 6</title>
+    <title>Hajimi Studio Honkai: Star Rail Cyrene 1/6 Resin Statue</title>
     <meta name="description" content="Esto es la descripción de mi página web">
     <meta name="keywords" content="html, ejercicio, ejercicio1, ejemplo">
     <meta name="author" content="Dario Valle">
