--- a/Paginas de la tienda/Pg4.html
+++ b/Paginas de la tienda/Pg4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pg 4</title>
+    <title>Sudadera con el logo de Honkai Star Rail</title>
     <meta name="description" content="Esto es la descripción de mi página web">
     <meta name="keywords" content="html, ejercicio, ejercicio1, ejemplo">
     <meta name="author" content="Dario Valle">
