--- a/Registro.html
+++ b/Registro.html
@@ -12,7 +12,7 @@
 </head>
 <body style="background-image: url(./assets/img/Fondo\ inicio\ de\ sesion.webp); background-repeat: no-repeat; background-size: cover;">
     <header style="background-color: black; height: 70px;">
-        <img src="./assets/img/LogoHonkai.png" alt="Logo Honkai Star Rail" width="90px" height="100%" style="float: left;">
+        <a href="./Inicio.html"><img src="./assets/img/LogoHonkai.png" alt="Logo Honkai Star Rail" width="90px" height="100%" style="float: left;"></a>
         <a href="./Registro.html"><button onclick="" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; float: right; color: yellow; background-color:black; border: 2px solid orange; border-radius: 3px; padding: 8px; margin: 1%;">Refistrarse</button></a>
         <a href="./Personajes.html"><button style=" width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 5%; padding: 8px;">Personajes</button></a>
         <a href="./Lore.html"><button style="width: 10%; color: white; background-color: black; border: 2px solid orange; border-radius: 3px; float: left; margin: 1%; margin-left: 1%; padding: 8px;">Lore</button></a>
