--- a/Personajes.html
+++ b/Personajes.html
@@ -55,11 +55,11 @@
             <!--Sampo-->
             <!--Feixiao-->
             <tr>
-                <td><a href="./Personajes/Sampo..html"><img src="./assets/img/SamChibiPersonajes.png" alt="--Sampo--"></a></td>
+                <td><a href="./Personajes/Sampo.html"><img src="./assets/img/SamChibiPersonajes.png" alt="--Sampo--"></a></td>
                 <td><a href="./Personajes/Feixiao.html"><img src="./assets/img/FeixiChibiPersonajes.png" alt="--Feixiao--"></a></td>
             </tr>
             <tr>
-                <td><a href="./Personajes/Sampo..html" style="color: white; text-decoration: none;">Sampo</a></td>
+                <td><a href="./Personajes/Sampo.html" style="color: white; text-decoration: none;">Sampo</a></td>
                 <td><a href="./Personajes/Feixiao.html" style="color: white; text-decoration: none;">Feixiao</a></td>
             </tr>
         </table>
