--- a/Personajes/Sampo.html
+++ b/Personajes/Sampo.html
@@ -65,16 +65,15 @@
         <span style="color: white;">
             <h1 id="A">Ataque basico</h1>
             <p><b>Espadas Deslumbrantes:</b> Inflige DMG de Viento igual al 100% del ATQ de Sampo a un solo enemigo.</p>
-            <video src=""></video>
+            <video autoplay loop muted src="../assets/video/Atk basico Sampo.mp4" style="width: 50%;"></video>
             <h1 id="H">Habilidad</h1>
             <p><b>Ricochet Love:</b> Inflige daño de viento igual al 42% del ATQ de Sampo a un solo enemigo, y además inflige daño durante 4 veces adicionales, cada vez infligiendo daño de viento igual al 42% del ATQ de Sampo a un enemigo aleatorio.</p>
-            <video src=""></video>
+            <video autoplay loop muted src="../assets/video/Habilodad Sampo.mp4" style="width: 50%;"></video>
             <h1 id="U">Ultimate</h1>
             <p><b>Regalo Sorpresa:</b> Inflige daño de viento igual al 128% del ATQ de Sampo a todos los enemigos, con un 100% de probabilidad base de aumentar el daño por tiempo (DoT) recibido por el objetivo en un 25% durante 2 turno(s).</p>
-            <video src=""></video>
+            <video autoplay loop muted src="../assets/video/Ulti Sampo.mp4" style="width: 50%;"></video>
             <h1 id="P">Pasiva</h1>
             <p>La habilidad de Sampo tiene un 65% de probabilidad base de infligir Cizalla de Viento durante 3 turnos. Los enemigos con Cizalla de Viento recibirán Daño en el Tiempo (DoT) de Viento igual al 31% del ATQ de Sampo al comienzo de cada turno. Cizalla de Viento puede acumularse hasta 5 veces.</p>
-            <video src=""></video>
         </span>
     </div>
 </body>
