--- a/Personajes/Seele.html
+++ b/Personajes/Seele.html
@@ -64,16 +64,16 @@
         <span style="color: white;">
             <h1 id="A">Ataque basico</h1>
             <p><b>Golpe:</b> Inflige daño cuántico igual al 100% del ATK de Seele a un solo enemigo.</p>
-            <video src=""></video>
+            <video autoplay loop muted src="../assets/video/Atk basico Seele.mp4" style="width: 50%;"></video>
             <h1 id="H">Habilidad</h1>
             <p><b>Espada Enfundada:</b> Inflige daño cuántico equivalente al 165% del ATQ de Seele a un solo enemigo. Seele gana un 25% de SPD durante 2 turno(s).</p>
-            <video src=""></video>
+            <video autoplay loop muted src="../assets/video/Habilidad Seele.mp4" style="width: 50%;"></video>
             <h1 id="U">Ultimate</h1>
             <p><b>Tormenta de Mariposas:</b> Seele entra en el estado mejorado y causa DMG Cuántico igual al 340% de su ATQ a un solo enemigo.</p>
-            <video src=""></video>
+            <video autoplay loop muted src="../assets/video/Ulti Seele.mp4" style="width: 50%;"></video>
             <h1 id="P">Pasiva</h1>
             <p><b>Resurgimiento:</b> Entra en el estado potenciado al derrotar a un enemigo con un ATQ Básico, Habilidad o Definitiva, y recibe un turno extra. Mientras está en el estado potenciado, el DAÑO de los ataques de Seele aumenta en un 60% durante 1 turno(s). Los enemigos derrotados en el turno extra proporcionado por Resurgimiento no activarán otro Resurgimiento.</p>
-            <video src=""></video>
+            <video autoplay loop muted src="../assets/video/Pasiva Seele.mp4" style="width: 50%;"></video>
         </span>
     </div>
 </body>
